[package]
name = "solana-streamer-sdk"
version = "1.2.1"
edition = "2021"
authors = ["William <byteblock6@gmail.com>", "sgxiang <sgxiang@gmail.com>", "wei <1415121722@qq.com>"]
repository = "https://github.com/0xfnzero/solana-streamer"
description = "A lightweight Rust library for real-time event streaming from Solana DEX trading programs. Supports PumpFun, PumpSwap, Bonk, and Raydium protocols with Yellowstone gRPC and ShredStream."
license = "MIT"
keywords = ["solana", "streaming", "events", "grpc", "shredstream"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-sdk = "3.0.0"
solana-client = "3.1.9"
solana-program = "3.0.0" 
solana-rpc-client = "3.1.9"
solana-rpc-client-api = "3.1.9"
solana-transaction-status = "3.1.9"
solana-account-decoder = "3.1.9"
solana-hash = "4.2.0"
solana-entry = { version = "3.1.9", features = ["agave-unstable-api"] }
solana-rpc-client-nonce-utils = "3.1.9"
solana-perf = "3.1.9"
solana-metrics = "3.1.9"
spl-associated-token-account = "8.0.0"
borsh = { version = "1.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-big-array = "0.5.1"
futures = "0.3.32"
futures-util = "0.3.32"
base64 = "0.22.1"
rand = "0.9.2"
bincode = "1.3"
anyhow = "1.0.102"
yellowstone-grpc-client = {  version = "10.2.0" }
yellowstone-grpc-proto = {  version = "10.1.1" }
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread"]}
tonic = { version = "0.14.5", features = ["transport"] }
rustls = { version = "0.23.36", features = ["ring"], default-features = false }
rustls-native-certs = "0.8.3"
tokio-rustls = "0.26.4"
log = "0.4.29"
chrono = "0.4.43"
regex = "1"
tracing = "0.1.44"
thiserror = "2.0.18"
async-trait = "0.1.89"
lazy_static = "1.5.0"
once_cell = "1.21.3"
dashmap = "6.1.0"
prost = "0.14.3"
prost-types = "0.14.3"
num_enum = "0.7.5"
num-derive = "0.4.2"
num-traits = "0.2.19"
hex = "0.4.3"
bytemuck = { version = "1.25.0" }
arrayref = "0.3.9"
borsh-derive = "1.6.0"
indicatif = "0.18.4"
maplit = "1.0.2"
env_logger = "0.11.9"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.12"
parking_lot = "0.12.5"
wide = "1.1.1"
spl-token = { version = "9.0.0", default-features = false, features = ["no-entrypoint"] }
spl-token-2022 = { version = "10.0.0", default-features = false, features = ["no-entrypoint"] }
solana-commitment-config = { version = "3.1.1", features = ["serde"] }
tonic-prost = "0.14.5"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
